--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "nodemon": "^3.1.7"
   },
   "dependencies": {
+    "async-mutex": "^0.5.0",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
